--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "@angular/router": "^5.2.11",
     "angularjs-responsive-navbar": "^1.0.1",
     "core-js": "^2.5.7",
+    "hoek": "^5.0.3",
+    "nodemailer": "^4.0.1",
     "rxjs": "^5.5.11",
+    "socks": "^2.1.6",
+    "ssri": "^5.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
